--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <!-----------------------				Separator						--------------->
 <body>
-<script>alert('All projects have been put to hold');</script>
+<script>alert('All projects have been put to hold');</script><br><br>
 <div class="container">
 <img src="resources/avatar.jpeg"><font size=5>&emsp;MrPriyanshu</font>
 </div><br>
