--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis/com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="resources/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="resources/script.js"></script>
 </head>
 <!-----------------------				Separator						--------------->
@@ -17,14 +18,20 @@
 </div><br>
 <form class="centered">
 <label align=center>Social</label><br><br>
-<button class="button" onclick="window.open('https://','_blank')">Github</button><br><br>
-<button class="button" onclick="window.open('https://','_blank')">Personal Website</button><br><br>
-<button class="button" onclick="window.open('https://','_blank')">Personal Blog</button><br><br><br>
+<button class="button git" onclick="window.open('https://','_blank')"><i class="fa fa-github"></i>&nbsp;Github</button><br><br>
+<button class="button website oth" onclick="window.open('https://','_blank')">&nbsp;Personal Website</button><br><br>
+<button class="button blog" onclick="window.open('https://','_blank')">&nbsp;Personal Blog</button><br><br>
+<button class="button ig" onclick="window.open('https://','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
+<button class="button fb" onclick="window.open('https://','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
+<button class="button tw" onclick="window.open('https://','_blank')"><i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
+<button class="button lin" onclick="window.open('https://','_blank')"><i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button><br><br>
+<button class="button yt" onclick="window.open('https://','_blank')"><i class="fa fa-youtube"></i>&nbsp;Youtube</button><br><br>
+<br>
 <label>Projects</label><br><br>
-<button class="button" onclick="window.open('https://','_blank')">Personal Website (Current Page)</button><br><br>
-<button class="button" onclick="window.open('https://','_blank')">Programming Books</button><br><br>
-<button class="button" onclick="window.open('https://','_blank')">QuickFonts</button><br><br>
-<button class="button" onclick="window.open('https://','_blank')">Python Telegram Bot</button><br><br>
+<button class="button oth" onclick="window.open('https://','_blank')">Personal Website (Current Page)</button><br><br>
+<button class="button oth" onclick="window.open('https://','_blank')">Programming Books</button><br><br>
+<button class="button oth" onclick="window.open('https://','_blank')">QuickFonts</button><br><br>
+<button class="button oth" onclick="window.open('https://','_blank')">Python Telegram Bot</button><br><br>
 <p><a href="resources/log.txt">Check the project status</a></p>
 </form>
 </body></html>
