--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <button class="button tw" onclick="window.open('https://','_blank')"><i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
 <button class="button lin" onclick="window.open('https://','_blank')"><i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button><br><br>
 <button class="button yt" onclick="window.open('https://','_blank')"><i class="fa fa-youtube"></i>&nbsp;Youtube</button><br><br>
+<button class="button tg" onclick="window.open('https://','_blank')"><i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
 <br>
 <label>Projects</label><br><br>
 <button class="button oth" onclick="window.open('https://','_blank')">Personal Website (Current Page)</button><br><br>
