--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html><head>
-<title>MrPriyanshu Github</title>
+<title>Priyanshu Kumar's Profile</title>
 <link rel="icon" type="image/jpeg" href="resources/avatar.jpeg">
 <link rel="preconnect" href="https://fonts/googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis/com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="resources/style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+</script>
 <script src="resources/script.js"></script>
 </head>
 <!-----------------------				Separator						--------------->
 <body>
 <script>alert('All projects have been put to hold');</script><br><br>
 <div class="container">
-<img src="resources/avatar.jpeg"><font size=5>&emsp;MrPriyanshu</font>
+<img src="resources/avatar.jpeg" class="header"><font size=5>&emsp;Priyanshu Kumar</font>
 </div><br>
 <form class="centered">
 <label align=center>Social</label><br><br>
-<button class="button git" onclick="window.open('https://','_blank')"><i class="fa fa-github"></i>&nbsp;Github</button><br><br>
-<button class="button website oth" onclick="window.open('https://','_blank')">&nbsp;Personal Website</button><br><br>
-<button class="button blog" onclick="window.open('https://','_blank')">&nbsp;Personal Blog</button><br><br>
+<button class="button git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')"><i class="fa fa-github"></i>&nbsp;Github</button><br><br>
+<button class="button website oth" onclick="window.open('https://priyanshukumar2003.github.com','_blank')">&nbsp;Personal Website</button><br><br>
+<button class="button blog" onclick="window.open('https://','_blank')"><i class="fa fa-blog"></i>&nbsp;Personal Blog</button><br><br>
 <button class="button ig" onclick="window.open('https://','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
 <button class="button fb" onclick="window.open('https://','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
 <button class="button tw" onclick="window.open('https://','_blank')"><i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
@@ -29,10 +31,10 @@
 <button class="button tg" onclick="window.open('https://','_blank')"><i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
 <br>
 <label>Projects</label><br><br>
-<button class="button oth" onclick="window.open('https://','_blank')">Personal Website (Current Page)</button><br><br>
-<button class="button oth" onclick="window.open('https://','_blank')">Programming Books</button><br><br>
-<button class="button oth" onclick="window.open('https://','_blank')">QuickFonts</button><br><br>
+<button class="button oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">Personal Website (Current Page)</button><br><br>
+<button class="button oth" onclick="window.open('https://energylocus.github.io/programmingbook','_blank')">Programming Books</button><br><br>
+<button class="button oth" onclick="window.open('https://energylocus.github.io/QuickFonts','_blank')">QuickFonts</button><br><br>
 <button class="button oth" onclick="window.open('https://','_blank')">Python Telegram Bot</button><br><br>
-<p><a href="resources/log.txt">Check the project status</a></p>
+<p><a href="resources/log.txt">Check the logs</a></p>
 </form>
 </body></html>
