--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@
 <title>404:ERROR</title>
 </head>
 <body>
-<h2><center>Oops ! Return back to <a href="https://priyanshukumar2003.github.io">HomePage</a>/center></h2>
+<h2><center>Oops ! Return back to <a href="https://priyanshukumar2003.github.io">HomePage</a></center></h2>
 </body>
 </html>
