--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/jpeg" href="resources/avatar.jpeg">
 <link rel="preconnect" href="https://fonts/googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis/com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis/com/css2?family=Quicksand&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="resources/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css">
