--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <form class="centered">
 <label align=center>Social</label><br><br>
 <button class="button git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')"><i class="fa fa-github"></i>&nbsp;Github</button><br><br>
-<button class="button website oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Personal Website</button><br><br>
-<button class="button blog" onclick="window.open('https://','_blank')"><i class="fa fa-blog"></i>&nbsp;Personal Blog</button><br><br>
+<button class="button website oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Website</button><br><br>
+<button class="button blog" onclick="window.open('https://','_blank')"><i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
 <button class="button ig" onclick="window.open('https://','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
 <button class="button fb" onclick="window.open('https://','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
 <button class="button tw" onclick="window.open('https://','_blank')"><i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
