--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html><head>
 <title>Priyanshu Kumar's Profile</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/jpeg" href="resources/avatar.jpeg">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Red+Hat+Display:wght@500&display=swap" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand&family=Red+Hat+Display:wght@500&display=swap" >
 <link rel="stylesheet" href="resources/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-</script>
 <script src="resources/script.js"></script>
-</head>
-<!-----------------------				Separator						--------------->
-<body>
-<script>alert('All projects have been put to hold');</script><br><br>
+</head><body>
 <div class="container">
-<img src="resources/avatar.jpeg" class="header"><font size=5>&emsp;Priyanshu Kumar</font>
+<img src="resources/avatar.jpeg" class="header"><font size=6>&emsp;Priyanshu Kumar</font>
 </div><br>
 <form class="centered">
 <label align=center>Social</label><br><br>
-<button class="button git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')"><i class="fa fa-github"></i>&nbsp;Github</button><br><br>
-<button class="button website oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Website</button><br><br>
-<button class="button blog" onclick="window.open('https://','_blank')"><i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
-<button class="button ig" onclick="window.open('https://','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
-<button class="button fb" onclick="window.open('https://','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
-<button class="button tw" onclick="window.open('https://','_blank')"><i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
-<button class="button lin" onclick="window.open('https://','_blank')"><i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button><br><br>
-<button class="button yt" onclick="window.open('https://','_blank')"><i class="fa fa-youtube"></i>&nbsp;Youtube</button><br><br>
-<button class="button tg" onclick="window.open('https://','_blank')"><i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
+<button class="git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')"><i class="fa fa-github"></i>&nbsp;Github</button><br><br>
+<button class="web oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Website</button><br><br>
+<button class="blog" onclick="window.open('https://','_blank')"><i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
+<button class="ig" onclick="window.open('https://','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
+<button class="fb" onclick="window.open('https://','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
+<button class="tw" onclick="window.open('https://','_blank')"><i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
+<button class="lin" onclick="window.open('https://','_blank')"><i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button><br><br>
+<button class="yt" onclick="window.open('https://','_blank')"><i class="fa fa-youtube"></i>&nbsp;Youtube</button><br><br>
+<button class="tg" onclick="window.open('https://','_blank')"><i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
 <br>
 <label>Projects</label><br><br>
-<button class="button oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">Personal Website (Current Page)</button><br><br>
-<button class="button oth" onclick="window.open('https://energylocus.github.io/programmingbook','_blank')">Programming Books</button><br><br>
-<button class="button oth" onclick="window.open('https://energylocus.github.io/QuickFonts','_blank')">QuickFonts</button><br><br>
-<button class="button oth" onclick="window.open('https://','_blank')">Python Telegram Bot</button><br><br>
+<button class="oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">Personal Website (Current Page)</button><br><br>
+<button class="oth" onclick="window.open('https://energylocus.github.io/programmingbook','_blank')">Programming Books</button><br><br>
+<button class="oth" onclick="window.open('https://energylocus.github.io/QuickFonts','_blank')">QuickFonts</button><br><br>
+<button class="oth" onclick="window.open('https://','_blank')">Python Telegram Bot</button><br><br>
 <p><a href="resources/log.txt">Check the logs</a></p>
-</form>
-</body></html>
+</form></body></html>
