--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 <script src="resources/script.js"></script>
 </head><body>
 <div class="container">
-<img src="resources/avatar.jpeg" class="header"><font size=6>&emsp;Priyanshu Kumar</font>
+<img src="resources/avatar.jpeg"><br>
+<font size=6>Priyanshu Kumar</font><br>
+<font size=4>A machine 👨🏻‍💻 that converts coffee into code 🌐</font><br>
 </div><br>
 <form class="centered">
 <label align=center>Social</label><br><br>
-<button class="git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')"><i class="fa fa-github"></i>&nbsp;Github</button><br><br>
+<button class="git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')"><i class="fa fa-github"></i>&nbsp;Github (primary)</button><br><br>
+<button class="git" onclick="window.open('https://github.com/energylocus','_blank')"><i class="fa fa-github"></i>&nbsp;Github (secondary)</button><br><br>
 <button class="web oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Website</button><br><br>
 <button class="blog" onclick="window.open('https://','_blank')"><i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
 <button class="ig" onclick="window.open('https://','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
@@ -27,9 +30,11 @@
 <button class="tg" onclick="window.open('https://','_blank')"><i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
 <br>
 <label>Projects</label><br><br>
+
 <button class="oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">Personal Website (Current Page)</button><br><br>
 <button class="oth" onclick="window.open('https://energylocus.github.io/programmingbook','_blank')">Programming Books</button><br><br>
 <button class="oth" onclick="window.open('https://energylocus.github.io/QuickFonts','_blank')">QuickFonts</button><br><br>
+<button class="oth" onclick="window.open('https://energylocus.github.io/ColorWorld','_blank')">ColourWorld</button><br><br>
 <button class="oth" onclick="window.open('https://','_blank')">Python Telegram Bot</button><br><br>
 <p><a href="resources/log.txt">Check the logs</a></p>
 </form></body></html>
