--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <label align=center>Social</label><br><br>
 <button class="git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')"><i class="fa fa-github"></i>&nbsp;Github (primary)</button><br><br>
 <button class="git" onclick="window.open('https://github.com/energylocus','_blank')"><i class="fa fa-github"></i>&nbsp;Github (secondary)</button><br><br>
-<button class="web oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Website</button><br><br>
+<button class="web oth" onclick="alert('Comimg very soon)">&nbsp;Portfolio</button><br><br>
 <button class="blog" onclick="window.open('https://','_blank')"><i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
 <button class="ig" onclick="window.open('https://','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
 <button class="fb" onclick="window.open('https://','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
