--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <button class="git" onclick="window.open('https://github.com/energylocus','_blank')"><i class="fa fa-github"></i>&nbsp;Github (secondary)</button><br><br>
 <button class="web oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Website (primary)</button><br><br>
 <button class="web oth" onclick="window.open('https://energylocus.github.io','_blank')">&nbsp;Website (secondary)</button><br><br>
-<button class="blog" onclick="window.open('https://','_blank')"><i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
-<button class="ig" onclick="window.open('https://','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
-<button class="fb" onclick="window.open('https://','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
-<button class="tw" onclick="window.open('https://','_blank')"><i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
-<button class="lin" onclick="window.open('https://','_blank')"><i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button><br><br>
-<button class="yt" onclick="window.open('https://','_blank')"><i class="fa fa-youtube"></i>&nbsp;Youtube</button><br><br>
-<button class="tg" onclick="window.open('https://','_blank')"><i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
+<button class="blog" onclick="window.open('https://priyanshukumar2003.blogspot.com/?m=1','_blank')"><i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
+<button class="ig" onclick="window.open('https://www.instagram.com/_iampriyanshukumar_/','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
+<button class="fb" onclick="window.open('https://www.facebook.com/priyanshu241','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
+<button class="tw" onclick="window.open('https://twitter.com/mr_priyanshu24','_blank')"><i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
+<button class="lin" onclick="window.open('https://https://www.linkedin.com/in/priyanshukumar2003','_blank')"><i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button><br><br>
+<button class="yt" onclick="window.open('https://youtube.com/channel/UCLL7h4aXa4UfDtTeFIoOkIQ','_blank')"><i class="fa fa-youtube"></i>&nbsp;Youtube</button><br><br>
+<button class="tg" onclick="window.open('https://telegram.me/priyanshukumar2003','_blank')"><i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
 <br>
 <label>Projects</label><br><br>
 
