--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <button class="lin" onclick="window.open('https://https://www.linkedin.com/in/priyanshukumar2003','_blank')"><i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button><br><br>
 <button class="yt" onclick="window.open('https://youtube.com/channel/UCLL7h4aXa4UfDtTeFIoOkIQ','_blank')"><i class="fa fa-youtube"></i>&nbsp;Youtube</button><br><br>
 <button class="tg" onclick="window.open('https://telegram.me/priyanshukumar2003','_blank')"><i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
+<button class="qu" onclick="window.open('https://qcfeekedxjoikxel.quora.com/','_blank')"><i class="fa fa-quora"></i>&nbsp;Quora Space</button><br><br>
 <br>
 <label>Projects</label><br><br>
 
