Button colours stopped displaying

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <label align=center>Social</label><br><br>
 <button class="git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')"><i class="fa fa-github"></i>&nbsp;Github (primary)</button><br><br>
 <button class="git" onclick="window.open('https://github.com/energylocus','_blank')"><i class="fa fa-github"></i>&nbsp;Github (secondary)</button><br><br>
-<button class="web oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Website (primary)</button><br><br>
-<button class="web oth" onclick="window.open('https://energylocus.github.io','_blank')">&nbsp;Website (secondary)</button><br><br>
+<button class="oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">&nbsp;Website (primary)</button><br><br>
+<button class="oth" onclick="window.open('https://energylocus.github.io','_blank')">&nbsp;Website (secondary)</button><br><br>
 <button class="blog" onclick="window.open('https://priyanshukumar2003.blogspot.com/?m=1','_blank')"><i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
 <button class="ig" onclick="window.open('https://www.instagram.com/_iampriyanshukumar_/','_blank')"><i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
 <button class="fb" onclick="window.open('https://www.facebook.com/priyanshu241','_blank')"><i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
