--- a/404.html
+++ b/404.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>404:ERROR</title>
+<link rel="icon" type="image/jpg" href="avatar.jpg" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="preconnect" href="https://fonts/googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis/com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<title>
+404:ERROR
+</title>
+<style>
+body { font-family:'Montserrat', sans-serif; text-align:center; background-color:black; color:white;}
+button { font-family:'Montserrat', sans-serif; border:none; border-radius:8px; padding:16px; width:20%;}
+button:hover { cursor:pointer; }
+@media screen and (max-width: 450px) 
+{	button { width:50%; }  }
+</style>
 </head>
 <body>
-<h2><center>Oops ! Return back to <a href="https://priyanshukumar2003.github.io">HomePage</a></center></h2>
+<h2>Oops! Whatever you were looking for wasn't found.<br><br><button onclick="window.open('https://priyanshukumar2003.github.io','_parent')"><b>HOMEPAGE</b></button></h2>
 </body>
 </html>
