--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 </div><br>
 <form class="centered">
 <label>Social</label><br><br>
+
 <button class="git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')">
 <i class="fa fa-github"></i>&nbsp;Github (primary)</button><br><br>
 
 <button class="git" onclick="window.open('https://github.com/energylocus','_blank')">
 <i class="fa fa-github"></i>&nbsp;Github (secondary)</button><br><br>
+
+<!--button class="web1" onclick="alert('I am currently working on it. Coming Soon.');">
+<i class="fa fa-globe"></i>&nbsp;Portfolio</button><br><br-->
 
 <button class="web1" onclick="alert('You are on website (primary)');">
 <i class="fa fa-globe"></i>&nbsp;Website (primary)</button><br><br>
@@ -51,15 +55,52 @@
 <button class="tg" onclick="window.open('https://telegram.me/priyanshukumar2003','_blank')">
 <i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
 
+<button class="tg" onclick="window.open('https://telegram.me/LOCUSUPDATE','_blank')">
+<i class="fa fa-telegram"></i>&nbsp;Telegram Channel</button><br><br>
+
+<button class="tg" onclick="window.open('https://telegram.me/mediacloudd','_blank')">
+<i class="fa fa-telegram"></i>&nbsp;Telegram Movies Channel</button><br><br>
+
 <button class="qu" onclick="window.open('https://qcfeekedxjoikxel.quora.com/','_blank')">
 <i class="fa fa-quora"></i>&nbsp;Quora Space</button><br><br>
 
-<br><label>Projects</label><br><br>
+<button class="web3" onclick="window.open('https://mediacloud.moviz.workers.dev','_blank')">
+<i class="fa fa-globe"></i>&nbsp;MediaCloud Movies Website</button><br><br>
 
-<button class="oth" onclick="window.open('https://priyanshukumar2003.github.io','_blank')">Personal Website (Current Page)</button><br><br>
-<button class="oth" onclick="window.open('https://energylocus.github.io/programmingbook','_blank')">Programming Books</button><br><br>
-<button class="oth" onclick="window.open('https://energylocus.github.io/QuickFonts','_blank')">QuickFonts</button><br><br>
-<button class="oth" onclick="window.open('https://energylocus.github.io/ColorWorld','_blank')">ColourWorld</button><br><br>
-<button class="oth" onclick="window.open('https://','_blank')">Python Telegram Bot</button><br><br>
+<br><label>Projects</label><br><br><div id="proj">
+
+<button onclick="window.open('https://github.com/priyanshukumar./2003.github.io','_blank')">
+Primary Website</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus.github.io','_blank')">
+Secondary Website</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/programmingbooks','_blank')">
+Programming Books</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/QuickFonts','_blank')">
+QuickFonts</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/ColorWorld','_blank')">
+ColourWorld</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/Telegram-Jarvis-Bot','_blank')">
+Python Telegram Bot</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/Telegram-Jarvis-Bot-2','_blank')">
+NodeJS Telegram Bot</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/url-shortener','_blank')">
+URL-Shortner</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/LoremIpsum','_blank')">
+LoremIpsum</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/telegram-url-uploader','_blank')">
+Telegram URL Uploader</button><br><br>
+
+<button onclick="window.open('https://github.com/energylocus/storage','_blank')">
+storage</button><br><br></div>
+
 <p><a href="resources/log.txt">Check the logs</a></p>
 </form></body></html>
