--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@ QuickFonts</button><br><br>
 <button onclick="window.open('https://github.com/energylocus/ColorWorld','_blank')">
 ColourWorld</button><br><br>
 
-<button onclick="window.open('https://github.com/energylocus/Telegram-Jarvis-Bot','_blank')">
+<button onclick="window.open('https://github.com/energylocus/Python-Telegram-Bot','_blank')">
 Python Telegram Bot</button><br><br>
 
-<button onclick="window.open('https://github.com/energylocus/Telegram-Jarvis-Bot-2','_blank')">
+<button onclick="window.open('https://github.com/energylocus/NodeJS-Telegram-Bot','_blank')">
 NodeJS Telegram Bot</button><br><br>
 
-<button onclick="window.open('https://github.com/energylocus/url-shortener','_blank')">
-URL-Shortner</button><br><br>
+<button onclick="window.open('https://github.com/energylocus/URL-Shortener-Telegram-Bot','_blank')">
+URL Shortner Telegram Bot</button><br><br>
 
 <button onclick="window.open('https://github.com/energylocus/LoremIpsum','_blank')">
 LoremIpsum</button><br><br>
 
-<button onclick="window.open('https://github.com/energylocus/telegram-url-uploader','_blank')">
-Telegram URL Uploader</button><br><br>
+<button onclick="window.open('https://github.com/energylocus/URL-Uploader-Telegram-Bot','_blank')">
+URL Uploader Telegram Bot</button><br><br>
 
 <button onclick="window.open('https://github.com/energylocus/storage','_blank')">
 storage</button><br><br></div>
