Updated webiste to latest links and informations.

--- a/index.html
+++ b/index.html
@@ -20,87 +20,83 @@
 <label>Social</label><br><br>
 
 <button class="git" onclick="window.open('https://github.com/priyanshukumar2003','_blank')">
-<i class="fa fa-github"></i>&nbsp;Github (primary)</button><br><br>
+<i class="fa fa-github"></i>&nbsp;Github (primary)</button>
 
 <button class="git" onclick="window.open('https://github.com/energylocus','_blank')">
-<i class="fa fa-github"></i>&nbsp;Github (secondary)</button><br><br>
+<i class="fa fa-github"></i>&nbsp;Github (secondary)</button>
 
 <!--button class="web1" onclick="alert('I am currently working on it. Coming Soon.');">
 <i class="fa fa-globe"></i>&nbsp;Portfolio</button><br><br-->
 
 <button class="web1" onclick="alert('You are on website (primary)');">
-<i class="fa fa-globe"></i>&nbsp;Website (primary)</button><br><br>
+<i class="fa fa-globe"></i>&nbsp;Website (primary)</button>
 
 <button class="web2" onclick="window.open('https://energylocus.github.io','_blank')">
-<i class="fa fa-globe"></i>&nbsp;Website (secondary)</button><br><br>
+<i class="fa fa-globe"></i>&nbsp;Website (secondary)</button>
 
 <button class="blog" onclick="window.open('https://priyanshukumar2003.blogspot.com/','_blank')">
-<i class="fa fa-blog"></i>&nbsp;Blog</button><br><br>
+<i class="fa fa-blog"></i>&nbsp;Blog</button>
 
 <button class="ig" onclick="window.open('https://www.instagram.com/_iampriyanshukumar_/','_blank')">
-<i class="fa fa-instagram"></i>&nbsp;Instagram</button><br><br>
+<i class="fa fa-instagram"></i>&nbsp;Instagram</button>
 
 <button class="fb" onclick="window.open('https://www.facebook.com/priyanshu241','_blank')">
-<i class="fa fa-facebook"></i>&nbsp;Facebook</button><br><br>
+<i class="fa fa-facebook"></i>&nbsp;Facebook</button>
 
 <button class="tw" onclick="window.open('https://twitter.com/mr_priyanshu24','_blank')">
-<i class="fa fa-twitter"></i>&nbsp;Twitter</button><br><br>
+<i class="fa fa-twitter"></i>&nbsp;Twitter</button>
 
 <button class="lin" onclick="window.open('https://https://www.linkedin.com/in/priyanshukumar2003','_blank')">
-<i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button><br><br>
+<i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button>
 
 <button class="yt" onclick="window.open('https://youtube.com/channel/UCLL7h4aXa4UfDtTeFIoOkIQ','_blank')">
-<i class="fa fa-youtube"></i>&nbsp;Youtube</button><br><br>
+<i class="fa fa-youtube"></i>&nbsp;Youtube</button>
 
 <button class="tg" onclick="window.open('https://telegram.me/priyanshukumar2003','_blank')">
-<i class="fa fa-telegram"></i>&nbsp;Telegram</button><br><br>
+<i class="fa fa-telegram"></i>&nbsp;Telegram</button>
 
 <button class="tg" onclick="window.open('https://telegram.me/LOCUSUPDATE','_blank')">
-<i class="fa fa-telegram"></i>&nbsp;Telegram Channel</button><br><br>
-
-<button class="tg" onclick="window.open('https://telegram.me/mediacloudd','_blank')">
-<i class="fa fa-telegram"></i>&nbsp;Telegram Movies Channel</button><br><br>
+<i class="fa fa-telegram"></i>&nbsp;Telegram Channel</button>
 
 <button class="qu" onclick="window.open('https://qcfeekedxjoikxel.quora.com/','_blank')">
-<i class="fa fa-quora"></i>&nbsp;Quora Space</button><br><br>
+<i class="fa fa-quora"></i>&nbsp;Quora Space</button>
 
-<button class="web3" onclick="window.open('https://mediacloud.moviz.workers.dev','_blank')">
-<i class="fa fa-globe"></i>&nbsp;MediaCloud Movies Website</button><br><br>
+<button class="web3" onclick="window.open('https://restless.moviz.workers.dev','_blank')">
+<i class="fa fa-globe"></i>&nbsp;Link Shortening Website</button>
 
-<br><label>Projects</label><br><br><div id="proj">
+<br><label>Projects</label><br><br>
+<div id="proj">
 
 <button onclick="window.open('https://github.com/priyanshukumar./2003.github.io','_blank')">
-Primary Website</button><br><br>
+Primary Website</button>
 
 <button onclick="window.open('https://github.com/energylocus.github.io','_blank')">
-Secondary Website</button><br><br>
-
-<button onclick="window.open('https://github.com/energylocus/programmingbooks','_blank')">
-Programming Books</button><br><br>
+Secondary Website</button>
 
 <button onclick="window.open('https://github.com/energylocus/QuickFonts','_blank')">
-QuickFonts</button><br><br>
+QuickFonts</button>
 
 <button onclick="window.open('https://github.com/energylocus/ColorWorld','_blank')">
-ColourWorld</button><br><br>
+ColourWorld</button>
 
 <button onclick="window.open('https://github.com/energylocus/Python-Telegram-Bot','_blank')">
-Python Telegram Bot</button><br><br>
+Python Telegram Bot</button>
 
 <button onclick="window.open('https://github.com/energylocus/NodeJS-Telegram-Bot','_blank')">
-NodeJS Telegram Bot</button><br><br>
+NodeJS Telegram Bot</button>
 
 <button onclick="window.open('https://github.com/energylocus/URL-Shortener-Telegram-Bot','_blank')">
-URL Shortner Telegram Bot</button><br><br>
+URL Shortner Telegram Bot</button>
 
 <button onclick="window.open('https://github.com/energylocus/LoremIpsum','_blank')">
-LoremIpsum</button><br><br>
+LoremIpsum</button>
 
 <button onclick="window.open('https://github.com/energylocus/URL-Uploader-Telegram-Bot','_blank')">
-URL Uploader Telegram Bot</button><br><br>
+URL Uploader Telegram Bot</button>
 
 <button onclick="window.open('https://github.com/energylocus/storage','_blank')">
-storage</button><br><br></div>
+storage</button>
 
+</div>
 <p><a href="resources/log.txt">Check the logs</a></p>
 </form></body></html>
