--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@ Python Telegram Bot</button>
 <button onclick="window.open('https://github.com/energylocus/NodeJS-Telegram-Bot','_blank')">
 NodeJS Telegram Bot</button>
 
-<button onclick="window.open('https://github.com/energylocus/URL-Shortener-Telegram-Bot','_blank')">
-URL Shortner Telegram Bot</button>
+<button onclick="window.open('https://github.com/energylocus/Heroku-URL-Shortener','_blank')">
+URL Shortner (Heroku)</button>
+
+<button onclick="window.open('https://github.com/energylocus/CloudFlare-URL-Shortener','_blank')">
+URL Shortner (Cloudflare)</button>
 
 <button onclick="window.open('https://github.com/energylocus/LoremIpsum','_blank')">
 LoremIpsum</button>
@@ -99,4 +102,5 @@ storage</button>
 
 </div>
 <p><a href="resources/log.txt">Check the logs</a></p>
+<p><a href="themes/start.html">Want something similar for yourself ?</a></p>
 </form></body></html>
