--- a/themes/themes.html
+++ b/themes/themes.html
@@ -13,7 +13,7 @@
 <h2>Backgrounds and Colours</h2>
 <p>Any avaliable color can be used as background and button colour. Find a huge range of colours <a href="https://energylocus.github.io/ColorWorld/color_nameA/index.html" target="_blank" style="color:white;">here</a></p>
 <h2>Buttons</h2>
-<p>There are huge amount of customizations avaliable but, you can always choose from here for your ease.</p><br>
+<p>There are huge amount of customizations available but, you can always choose from here for your ease.</p><br>
 <div class="centered">
 <button class="git" onclick="alert('Secret Code : git');">Github</button>
 <button class="blog" onclick="alert('Secret Code : blog');">Blogger</button>
