--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <button class="tw" onclick="window.open('https://twitter.com/mr_priyanshu24','_blank')">
 <i class="fa fa-twitter"></i>&nbsp;Twitter</button>
 
-<button class="lin" onclick="window.open('https://https://www.linkedin.com/in/priyanshukumar2003','_blank')">
+<button class="lin" onclick="window.open('https://www.linkedin.com/in/priyanshukumar2003','_blank')">
 <i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button>
 
 <button class="yt" onclick="window.open('https://youtube.com/channel/UCLL7h4aXa4UfDtTeFIoOkIQ','_blank')">
