--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head>
 <title>Priyanshu Kumar's Profile</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/jpeg" href="resources/avatar.jpeg">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,6 +48,9 @@
 
 <button class="lin" onclick="window.open('https://www.linkedin.com/in/priyanshukumar2003','_blank')">
 <i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button>
+
+<button class="lin" onclick="window.open('https://discordapp.com/users/1020524223988498522','_blank')">
+<i class="fa fa-discord"></i>&nbsp;Discord</button>
 
 <button class="yt" onclick="window.open('https://youtube.com/channel/UCLL7h4aXa4UfDtTeFIoOkIQ','_blank')">
 <i class="fa fa-youtube"></i>&nbsp;Youtube</button>
