--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <button class="lin" onclick="window.open('https://www.linkedin.com/in/priyanshukumar2003','_blank')">
 <i class="fa fa-linkedin"></i>&nbsp;LinkedIn</button>
 
-<button class="lin" onclick="window.open('https://discordapp.com/users/1020524223988498522','_blank')">
+<button class="dis" onclick="window.open('https://discordapp.com/users/1020524223988498522','_blank')">
 <i class="fa fa-discord"></i>&nbsp;Discord</button>
 
 <button class="yt" onclick="window.open('https://youtube.com/channel/UCLL7h4aXa4UfDtTeFIoOkIQ','_blank')">
