--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ Primary Website</button>
 <button onclick="window.open('https://github.com/energylocus.github.io','_blank')">
 Secondary Website</button>
 
+<button onclick="window.open('https://github.com/priyanshukumar2003/CPP-Sprint','_blank')">
+CPP-Sprint</button>
+  
 <button onclick="window.open('https://github.com/energylocus/QuickFonts','_blank')">
 QuickFonts</button>
 
