--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 <button class="dis" onclick="window.open('https://discordapp.com/users/1020524223988498522','_blank')">
 <i class="fa fa-discord"></i>&nbsp;Discord</button>
 
+<button class="snap" onclick="window.open('https://www.snapchat.com/add/mr.priyanshu24','_blank')">
+<i class="fa fa-snapchat"></i>&nbsp;Snapchat</button>
+
 <button class="yt" onclick="window.open('https://youtube.com/channel/UCLL7h4aXa4UfDtTeFIoOkIQ','_blank')">
 <i class="fa fa-youtube"></i>&nbsp;Youtube</button>
 
