--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <button class="fb" onclick="window.open('https://www.facebook.com/priyanshu241','_blank')">
 <i class="fa fa-facebook"></i>&nbsp;Facebook</button>
 
-<button class="tw" onclick="window.open('https://twitter.com/mr_priyanshu24','_blank')">
+<button class="tw" onclick="window.open('https://twitter.com/kpriyanshu2003','_blank')">
 <i class="fa fa-twitter"></i>&nbsp;Twitter</button>
 
 <button class="lin" onclick="window.open('https://www.linkedin.com/in/priyanshukumar2003','_blank')">
@@ -73,10 +73,10 @@
 <br><label>Projects</label><br><br>
 <div id="proj">
 
-<button onclick="window.open('https://github.com/priyanshukumar./2003.github.io','_blank')">
+<button onclick="window.open('https://github.com/priyanshukumar2003/priyanshukumar2003.github.io','_blank')">
 Primary Website</button>
 
-<button onclick="window.open('https://github.com/energylocus.github.io','_blank')">
+<button onclick="window.open('https://github.com/EnergyLocus/energylocus.github.io','_blank')">
 Secondary Website</button>
 
 <button onclick="window.open('https://github.com/priyanshukumar2003/CPP-Sprint','_blank')">
